// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OrderList renders Error when fetching data is failed 1`] = `
<DocumentFragment>
  <div>
    Error...
  </div>
</DocumentFragment>
`;

exports[`OrderList renders OrderList correctly when the cart is empty 1`] = `
<DocumentFragment>
  <header
    class="header"
  >
    <div
      class="logo"
    >
      <a
        href="/"
      >
        <img
          alt="header-logo"
          data-nimg="1"
          decoding="async"
          height="170"
          loading="lazy"
          src="/_next/image?url=%2Fimages%2Fheader_logo.png&w=384&q=75"
          srcset="/_next/image?url=%2Fimages%2Fheader_logo.png&w=256&q=75 1x, /_next/image?url=%2Fimages%2Fheader_logo.png&w=384&q=75 2x"
          style="color: transparent;"
          width="170"
        />
      </a>
    </div>
    <div
      class="hamburger"
    >
      <input
        class="menu_btn_check"
        id="menu_btn_check"
        type="checkbox"
      />
      <label
        class="menu_btn"
        for="menu_btn_check"
      >
        <span />
      </label>
      <nav
        class="nav"
      >
        <ul>
          <li>
            <a
              href="/"
            >
              メニュー
            </a>
          </li>
          <li>
            <a
              href="/shop/list"
            >
              ショップ
            </a>
          </li>
          <li>
            <a
              href="/shop/favorite"
            >
              お気に入り
            </a>
          </li>
          <li>
            <a
              href="/order/list"
            >
              注文リスト
            </a>
          </li>
          <li>
            <a
              href="/order/order_history"
            >
              注文履歴
            </a>
          </li>
          <li
            class="true"
          >
            <a
              href="/login"
            >
              ログイン
            </a>
          </li>
          <li
            class="false"
          >
            ログアウト
          </li>
        </ul>
      </nav>
    </div>
  </header>
  <div>
    <ul
      class="breadList"
    >
      <li>
        <a
          href="/"
        >
          Food Koala トップ
        </a>
      </li>
      <li>
        <i
          class="fa-solid fa-forward"
        />
      </li>
      <li>
        <a
          href="/order/list"
        >
          注文リスト
        </a>
      </li>
      <li>
        <i
          class="fa-solid fa-forward"
        />
      </li>
    </ul>
  </div>
  <div
    class="order_list"
  >
    <div>
      <h1>
        注文リスト
      </h1>
    </div>
    <div
      class="order_list"
    >
      <br />
      <div
        class="order_list_sub"
      >
        カートに商品はありません
      </div>
      <br />
    </div>
    <div
      class="alert"
    >
      <p>
        ※カートに商品がないため、購入できません
      </p>
      <button>
        <a
          href="/"
        >
          メニュー一覧へ
        </a>
      </button>
    </div>
  </div>
  <footer
    class="footer"
  >
    <a
      class="link"
      href="/concept"
    >
      About us
    </a>
    <a
      class="link"
      href="/inquiry_form"
    >
      お問い合わせ
    </a>
  </footer>
</DocumentFragment>
`;

exports[`renders Orderlist when items in the cart 1`] = `
<DocumentFragment>
  <header
    class="header"
  >
    <div
      class="logo"
    >
      <a
        href="/"
      >
        <img
          alt="header-logo"
          data-nimg="1"
          decoding="async"
          height="170"
          loading="lazy"
          src="/_next/image?url=%2Fimages%2Fheader_logo.png&w=384&q=75"
          srcset="/_next/image?url=%2Fimages%2Fheader_logo.png&w=256&q=75 1x, /_next/image?url=%2Fimages%2Fheader_logo.png&w=384&q=75 2x"
          style="color: transparent;"
          width="170"
        />
      </a>
    </div>
    <div
      class="hamburger"
    >
      <input
        class="menu_btn_check"
        id="menu_btn_check"
        type="checkbox"
      />
      <label
        class="menu_btn"
        for="menu_btn_check"
      >
        <span />
      </label>
      <nav
        class="nav"
      >
        <ul>
          <li>
            <a
              href="/"
            >
              メニュー
            </a>
          </li>
          <li>
            <a
              href="/shop/list"
            >
              ショップ
            </a>
          </li>
          <li>
            <a
              href="/shop/favorite"
            >
              お気に入り
            </a>
          </li>
          <li>
            <a
              href="/order/list"
            >
              注文リスト
            </a>
          </li>
          <li>
            <a
              href="/order/order_history"
            >
              注文履歴
            </a>
          </li>
          <li
            class="true"
          >
            <a
              href="/login"
            >
              ログイン
            </a>
          </li>
          <li
            class="false"
          >
            ログアウト
          </li>
        </ul>
      </nav>
    </div>
  </header>
  <div>
    <ul
      class="breadList"
    >
      <li>
        <a
          href="/"
        >
          Food Koala トップ
        </a>
      </li>
      <li>
        <i
          class="fa-solid fa-forward"
        />
      </li>
      <li>
        <a
          href="/order/list"
        >
          注文リスト
        </a>
      </li>
      <li>
        <i
          class="fa-solid fa-forward"
        />
      </li>
    </ul>
  </div>
  <div
    class="order_list"
  >
    <div
      class="h1"
    >
      <h1>
        注文リスト
      </h1>
    </div>
    <div
      class="order_list"
    >
      <div>
        <dl>
          <dt />
          <dd>
            <img
              alt="商品画像"
              data-nimg="1"
              decoding="async"
              height="150"
              loading="lazy"
              src=""
              style="color: transparent;"
              width="150"
            />
          </dd>
          <dd>
            <select
              id="itemCount-0"
              name="itemCount"
            >
              <option
                value="1"
              >
                1
              </option>
              <option
                value="2"
              >
                2
              </option>
              <option
                value="3"
              >
                3
              </option>
            </select>
            個
          </dd>
          <dd>
            NaN円
          </dd>
          <dd>
            <button
              class="delete_button"
              value="1"
            >
              削除
            </button>
          </dd>
        </dl>
        <p>
          小計：NaN円
        </p>
      </div>
    </div>
    <button
      class="transition_button"
    >
      購入画面へ
    </button>
  </div>
  <footer
    class="footer"
  >
    <a
      class="link"
      href="/concept"
    >
      About us
    </a>
    <a
      class="link"
      href="/inquiry_form"
    >
      お問い合わせ
    </a>
  </footer>
</DocumentFragment>
`;
